--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="cont">
     </div>
     <audio id="intro-audio" src="assets/audio/intro.mp3" autoplay loop></audio>
+    <div id="instr" class="uiSkipButton">WALKTHROUGH</div>
 </body>
 </html>
 
